--- a/src/components/Error.module.css
+++ b/src/components/Error.module.css
@@ -1,5 +1,10 @@
 .error {
-  color: red;
+  color: #f77474;
   font-size: 0.8rem;
   margin: 0;
+}
+@media (prefers-color-scheme: light) {
+  .error {
+    color: red;
+  }
 }
